[tool.poetry]
name = "pdf.bookmark"
version = "0.1.0"
description = "a work in progress"
authors = ["krasjet"]
license = "GPL-3.0-only"
packages = [
  { include = "pdfbm" },
  { include = "pdfxmeta" },
  { include = "fitzutils" }
]

[tool.poetry.dependencies]
python = "^3.8"
PyMuPDF = "^1.17.4"
toml = "^0.10.1"

[tool.poetry.dev-dependencies]
pylint = "^2.5.3"
jedi = "^0.17.2"
mamba = "^0.11.0"

[tool.poetry.scripts]
pdfxmeta = "pdfxmeta.app:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
