[tool.poetry]
name = "pdf.tocgen"
version = "1.2.2"
description = "Automatically generate table of contents for pdf files"
authors = ["krasjet"]
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://krasjet.com/voice/pdf.tocgen/"
repository = "https://github.com/Krasjet/pdf.tocgen"
keywords = ["pdf", "cli"]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop"
]

packages = [
  { include = "pdfxmeta" },
  { include = "pdftocgen" },
  { include = "pdftocio" },
  { include = "fitzutils" }
]

[tool.poetry.dependencies]
python = "^3.7"
PyMuPDF = "^1.18.0"
toml = "^0.10.1"

[tool.poetry.dev-dependencies]
pylint = "^2.5.3"
jedi = "^0.17.2"
mamba = "^0.11.1"

[tool.poetry.scripts]
pdfxmeta = "pdfxmeta.app:main"
pdftocgen = "pdftocgen.app:main"
pdftocio = "pdftocio.app:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
